@@ -1,5 +1,8 @@
 2009-03-10  Akira TAGOH  <tagoh@redhat.com>
 
+	* applet/main.c (_preference_activated): Fix a warning on free.
+	(_create_applet): likewise.
+
 	* configure.ac: bump to 0.106.1.
 
 	* src/monitor.c (imsettings_monitor_get_current_user_im): Fix appearing
